--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -15,6 +16,14 @@
   "devDependencies": {
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4",
     "typescript": "^4.3.2"
   }
 }
