--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,9 +23,11 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "import/no-unresolved": "off",
     "import/extensions": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }]
   }
 }
