--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "import/no-unresolved": "off",
     "import/extensions": "off",
     "react/button-has-type": "off",
+    "react/require-default-props": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }]
   }
