--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.34.0"
+    "react-text-mask": "^5.4.3",
+    "sass": "^1.34.0",
+    "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
+    "@types/react-text-mask": "^5.4.7",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
